--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Hanyaku",
   "license": "AGPL-3.0",
   "dependencies": {
-    "discord.js": "^12.5.3"
+    "better-sqlite3": "^7.4.1",
+    "discord-prefix": "^2.0.0",
+    "discord.js": "^12.5.3",
+    "fs": "^0.0.1-security"
   }
 }
