--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "better-sqlite3": "^7.4.1",
     "discord-prefix": "^2.0.0",
     "discord.js": "^12.5.3",
+    "express": "^4.17.1",
     "fs": "^0.0.1-security"
   }
 }
